# django-coin-monitor

./: .deepsource.toml  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.MD  manage.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  test.yml
coin_monitor/: asgi.py  settings.py  urls.py  wsgi.py
coin_monitor_api/: apps.py  models.py  tests.py  views.py
coin_monitor_api/clients/: coin_gecko_client.py
coin_monitor_api/controllers/: coin_controller.py
